--- a/config/crd/bases/spike-mitigation.mmmknt.dev_mitigationrules.yaml
+++ b/config/crd/bases/spike-mitigation.mmmknt.dev_mitigationrules.yaml
@@ -44,10 +44,12 @@ spec:
               description: Foo is an example field of MitigationRule. Edit MitigationRule_types.go
                 to remove/update
               type: string
-            hpaUpperLimit:
+            hpaTriggerRate:
               type: integer
             internalHost:
               type: string
+            mitigationTriggerRate:
+              type: integer
           type: object
         status:
           description: MitigationRuleStatus defines the observed state of MitigationRule
