--- a/config/samples/spike-mitigation_v1_mitigationrule.yaml
+++ b/config/samples/spike-mitigation_v1_mitigationrule.yaml
@@ -4,4 +4,9 @@ metadata:
   name: mitigationrule-sample
 spec:
   # Add fields here
-  foo: bar
+  externalHost: "external host"
+  internalHost: "internal host"
+  hpaTriggerRate: 50
+  mitigationTriggerRate: 80
+  ddApiKey: "Api Key for datadog"
+  ddAppKey: "App Key for datadog"
