Make metrics condition specifiable

--- a/config/crd/bases/spike-mitigation.mmmknt.dev_mitigationrules.yaml
+++ b/config/crd/bases/spike-mitigation.mmmknt.dev_mitigationrules.yaml
@@ -44,6 +44,13 @@ spec:
               type: integer
             internalHost:
               type: string
+            metricsCondition:
+              properties:
+                clusterName:
+                  type: string
+                metricsName:
+                  type: string
+              type: object
             metricsStoreSecretRef:
               properties:
                 ddApiKeyRef:
