--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -36,4 +36,5 @@ spec:
           requests:
             cpu: 100m
             memory: 20Mi
+      serviceAccountName: "temp-spike-mitigation-operator"
       terminationGracePeriodSeconds: 10
