FIx for getting secret

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -13,6 +13,13 @@ rules:
   verbs:
   - list
 - apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - list
+  - watch
+- apiGroups:
   - networking.istio.io
   resources:
   - virtualservices
