--- a/config/crd/bases/spike-mitigation.mmmknt.dev_mitigationrules.yaml
+++ b/config/crd/bases/spike-mitigation.mmmknt.dev_mitigationrules.yaml
@@ -41,6 +41,7 @@ spec:
                 to remove/update
               type: string
             hpaTriggerRate:
+              format: int32
               type: integer
             internalHost:
               type: string
@@ -69,7 +70,12 @@ spec:
                   type: object
               type: object
             mitigationTriggerRate:
+              format: int32
               type: integer
+            monitoredHpaNames:
+              items:
+                type: string
+              type: array
           type: object
         status:
           description: MitigationRuleStatus defines the observed state of MitigationRule
