--- a/config/crd/bases/loadbalancing.spike-mitigator.mmmknt.dev_balancingrules.yaml
+++ b/config/crd/bases/loadbalancing.spike-mitigator.mmmknt.dev_balancingrules.yaml
@@ -6,20 +6,20 @@ metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.3.0
   creationTimestamp: null
-  name: mitigationrules.spike-mitigation.mmmknt.dev
+  name: balancingrules.loadbalancing.spike-mitigator.mmmknt.dev
 spec:
-  group: spike-mitigation.mmmknt.dev
+  group: loadbalancing.spike-mitigator.mmmknt.dev
   names:
-    kind: MitigationRule
-    listKind: MitigationRuleList
-    plural: mitigationrules
-    singular: mitigationrule
+    kind: BalancingRule
+    listKind: BalancingRuleList
+    plural: balancingrules
+    singular: balancingrule
   scope: Namespaced
   subresources:
     status: {}
   validation:
     openAPIV3Schema:
-      description: MitigationRule is the Schema for the mitigationrules API
+      description: BalancingRule is the Schema for the balancingrules API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
@@ -34,7 +34,7 @@ spec:
         metadata:
           type: object
         spec:
-          description: MitigationRuleSpec defines the desired state of MitigationRule
+          description: BalancingRuleSpec defines the desired state of BalancingRule
           properties:
             externalAuthorizationRef:
               properties:
@@ -46,7 +46,7 @@ spec:
             externalHost:
               type: string
             gatewayName:
-              description: Foo is an example field of MitigationRule. Edit MitigationRule_types.go
+              description: Foo is an example field of BalancingRule. Edit BalancingRule_types.go
                 to remove/update
               type: string
             hostInfoHeaderKeyRef:
@@ -115,12 +115,12 @@ spec:
               type: string
           type: object
         status:
-          description: MitigationRuleStatus defines the observed state of MitigationRule
+          description: BalancingRuleStatus defines the observed state of BalancingRule
           type: object
       type: object
-  version: v1
+  version: v1alpha1
   versions:
-  - name: v1
+  - name: v1alpha1
     served: true
     storage: true
 status:
