--- a/config/crd/patches/webhook_in_balancingrules.yaml
+++ b/config/crd/patches/webhook_in_balancingrules.yaml
@@ -3,7 +3,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: mitigationrules.spike-mitigation.mmmknt.dev
+  name: balancingrules.loadbalancing.spike-mitigator.mmmknt.dev
 spec:
   conversion:
     strategy: Webhook
