--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -20,18 +20,9 @@ rules:
   - list
   - watch
 - apiGroups:
-  - networking.istio.io
+  - loadbalancing.spike-mitigator.mmmknt.dev
   resources:
-  - virtualservices
-  verbs:
-  - create
-  - delete
-  - list
-  - update
-- apiGroups:
-  - spike-mitigation.mmmknt.dev
-  resources:
-  - mitigationrules
+  - balancingrules
   verbs:
   - create
   - delete
@@ -41,10 +32,19 @@ rules:
   - update
   - watch
 - apiGroups:
-  - spike-mitigation.mmmknt.dev
+  - loadbalancing.spike-mitigator.mmmknt.dev
   resources:
-  - mitigationrules/status
+  - balancingrules/status
   verbs:
   - get
   - patch
+  - update
+- apiGroups:
+  - networking.istio.io
+  resources:
+  - virtualservices
+  verbs:
+  - create
+  - delete
+  - list
   - update
